[gd_scene load_steps=17 format=3 uid="uid://b3kb1tbi6e63f"]

[ext_resource type="Script" path="res://scenes/IngameScene.gd" id="1_objyc"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/FadeOverlay.tscn" id="1_y6ebv"]
[ext_resource type="PackedScene" uid="uid://cne1ht4ljviec" path="res://gameplay/seed/SeedInputController.tscn" id="2_cwhpr"]
[ext_resource type="Texture2D" uid="uid://ct3ewobsr23g6" path="res://environment/foreground.png" id="2_pc1m8"]
[ext_resource type="PackedScene" uid="uid://dduwld105f4t4" path="res://gameplay/seed/SeedManager.tscn" id="2_pqv0f"]
[ext_resource type="Texture2D" uid="uid://be3jhihgcljk6" path="res://environment/foreground2.png" id="3_6da0r"]
[ext_resource type="PackedScene" uid="uid://bybh3427jvss8" path="res://gameplay/tree/TreeManager.tscn" id="3_8ehx3"]
[ext_resource type="PackedScene" uid="uid://jyv4g54adkmo" path="res://ui/overlays/PauseOverlay.tscn" id="3_8o178"]
[ext_resource type="PackedScene" uid="uid://d4audav6d3llq" path="res://gameplay/seed/Seed.tscn" id="3_agimx"]
[ext_resource type="PackedScene" uid="uid://b8gafnaxglmu7" path="res://gameplay/ground/Ground.tscn" id="4_jgxb4"]
[ext_resource type="PackedScene" uid="uid://ccemw0q3ryqvo" path="res://gameplay/water/WaterDrop.tscn" id="5_ymd2v"]
[ext_resource type="PackedScene" uid="uid://da021ebdwomt7" path="res://gameplay/hazard/Hazard.tscn" id="6_uy3an"]
[ext_resource type="PackedScene" uid="uid://bxiju2x2w34uw" path="res://ui/overlays/GameOverOverlay.tscn" id="9_48hko"]
[ext_resource type="AudioStream" uid="uid://c4fvx7dylwbgn" path="res://audio/ambiences/Ambience_Wasteland(loop).ogg" id="11_by6hs"]
[ext_resource type="Texture2D" uid="uid://bcuwh4wqc7a6l" path="res://environment/foreground3.png" id="12_f0aep"]
[ext_resource type="PackedScene" uid="uid://otpvrdggf6gf" path="res://gameplay/tree/ForestTree.tscn" id="12_wmh6b"]

[node name="IngameScene" type="Node2D"]
script = ExtResource("1_objyc")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("2_pc1m8")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("3_6da0r")

[node name="SeedManager" parent="." node_paths=PackedStringArray("input_controller", "seed", "tree_manager") instance=ExtResource("2_pqv0f")]
input_controller = NodePath("../SeedInputController")
seed = NodePath("../WorldObjects/Seed")
tree_manager = NodePath("../WorldObjects/TreeManager")

[node name="SeedInputController" parent="." instance=ExtResource("2_cwhpr")]
unique_name_in_owner = true
position = Vector2(0, -1)

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -1)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[node name="WorldObjects" type="Node2D" parent="."]

[node name="TreeManager" parent="WorldObjects" instance=ExtResource("3_8ehx3")]
unique_name_in_owner = true

[node name="ForestTree" parent="WorldObjects" instance=ExtResource("12_wmh6b")]
position = Vector2(88, 58)

[node name="Hazard" parent="WorldObjects" instance=ExtResource("6_uy3an")]
position = Vector2(-39, -83)

[node name="Hazard2" parent="WorldObjects" instance=ExtResource("6_uy3an")]
position = Vector2(54, -58)

[node name="Hazard3" parent="WorldObjects" instance=ExtResource("6_uy3an")]
position = Vector2(3, -62)

[node name="WaterDrop" parent="WorldObjects" instance=ExtResource("5_ymd2v")]
position = Vector2(-29, -56)

[node name="WaterDrop2" parent="WorldObjects" instance=ExtResource("5_ymd2v")]
position = Vector2(0, -90)

[node name="WaterDrop3" parent="WorldObjects" instance=ExtResource("5_ymd2v")]
position = Vector2(23, -37)

[node name="Seed" parent="WorldObjects" instance=ExtResource("3_agimx")]
unique_name_in_owner = true
position = Vector2(0, -1)
mass = 0.2

[node name="SeedControllerTransform" type="RemoteTransform2D" parent="WorldObjects/Seed"]
remote_path = NodePath("../../../SeedInputController")
update_rotation = false
update_scale = false

[node name="CameraTransform" type="RemoteTransform2D" parent="WorldObjects/Seed"]
remote_path = NodePath("../../../Camera2D")
update_rotation = false
update_scale = false

[node name="Ground" parent="WorldObjects" node_paths=PackedStringArray("camera") instance=ExtResource("4_jgxb4")]
unique_name_in_owner = true
position = Vector2(0, 43)
camera = NodePath("../../Camera2D")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
texture = ExtResource("12_f0aep")

[node name="UI" type="CanvasLayer" parent="."]

[node name="FadeOverlay" parent="UI" instance=ExtResource("1_y6ebv")]
unique_name_in_owner = true
process_mode = 1
visible = false

[node name="PauseOverlay" parent="UI" instance=ExtResource("3_8o178")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="GameOverOverlay" parent="UI" instance=ExtResource("9_48hko")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="DesertAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_by6hs")
volume_db = -10.0
autoplay = true
